# tradestats

./: .gitignore  CMakeLists.txt  README.md  cross-toolchain.cmake  main.c
final-project/c/: CMakeLists.txt  Makefile  README.md  cross-toolchain.cmake  main-with-timer.c  main.c  symbols.txt
final-project/c/include/: CMakeLists.txt  constants.h  queue.h  utilities.h  vector.c  vector.h
final-project/c/src/: CMakeLists.txt  queue.c  utilities.c  vector.c
final-project/python-test/: main.py  requirements.txt
include/: queue.h
prod-cons-preparatory-homework/: Makefile  prod-cons.c  prod-cons.h
report/: perf.txt  report.org  report.tex
src/: queue.c  utilities.c  vector.c
